# utility-route-planner

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  settings.py
data/examples/: alliander_service_area.fgb  alliander_service_area.fgb.license  case_04.gpkg.license  project_area_ede_componistenbuurt.geojson  project_area_sample_apeldoorn.geojson  pytest_example_suitability_raster.tif  pytest_example_suitability_raster_old.tif  pytest_osm_graph.pkl  road_crossing_example.geojson  traceontwerp_apeldoorn.geojson
data/processed/: .gitignore
docker/: Dockerfile
src/: datamodels.py  geo_utilities.py  reachability_design.py
src/models/: lcpa.py
src/models/lcpa/: lcpa.py  lcpa_datastructures.py  lcpa_engine.py  lcpa_main.py
src/models/mcda/: exceptions.py  load_mcda_preset.py  load_mcda_preset2.py  mcda_datastructures.py  mcda_engine.py  mcda_main.py  mcda_presets.py  mcda_rasterizing.py
src/models/mcda/vector_preprocessing/: base.py  begroeidterreindeel.py  excluded_area.py  kunstwerkdeel.py  onbegroeid_terreindeel.py  ondersteunend_waterdeel.py  ondersteunend_wegdeel.py  overig_bouwwerk.py  pand.py  protected_area.py  small_above_ground_obstacles.py  validation.py  vegetation_object.py  waterdeel.py  wegdeel.py
src/util/: datastructures.py  geo_utilities.py  load.py  raster_to_graph.py  write.py
tests/integration/: conftest.py  main_test.py  mcda_lcpa_main_test.py  osmnx_test.py  raster_to_graph_test.py  route_evaluation_test.py  vrt_routing_test.py
tests/integration/lcpa/: lcpa_test.py
tests/integration/mcda/: load_benchmark_preset_test.py  load_benchmark_test.py  mcda_raster_test.py  mcda_test.py  mcda_vector_base_test.py  mcda_vector_raster_test.py  mcda_vector_test.py  rasterio_async_test.py  vrt_builder_test.py
tests/integration/multilayer_network/: osm_graph_preprocessing_test.py  osmnx_test.py  raster_to_graph_test.py  vector_to_graph_test.py
tests/integration/multilayer_network/hexagon_graph/: hexagon_graph_builder_test.py  vector_to_graph_test.py
tests/unit/mcda/: mcda_utils_test.py
tests/unit/multilayer_network/: conftest.py  osm_graph_downloader_test.py  osm_graph_preprocessing_test.py  pipe_ramming_test.py
tests/unit/multilayer_network/hexagon_graph/: __init__.py  hexagon_edge_generator_test.py  hexagon_grid_constructor_test.py  hexagon_utils_test.py
utility_route_planner/models/: route_evaluation_metrics.py
utility_route_planner/models/lcpa/: lcpa_datastructures.py  lcpa_engine.py  lcpa_main.py
utility_route_planner/models/mcda/: dataclasses.py  exceptions.py  load_mcda_preset.py  mcda_datastructures.py  mcda_engine.py  mcda_presets.py  mcda_presets.yaml  mcda_rasterizing.py  mcda_utils.py  vrt_builder.py
utility_route_planner/models/mcda/vector_preprocessing/: base.py  begroeidterreindeel.py  excluded_area.py  existing_substations.py  existing_utilities.py  kunstwerkdeel.py  (+11 more)
utility_route_planner/models/multilayer_network/: exceptions.py  graph_datastructures.py  hexagon_graph_builder.py  osm_graph_preprocessing.py  pipe_ramming.py
utility_route_planner/util/: geo_utilities.py  graph_utilities.py  load.py  osm_graph_downloader.py  osm_graph_preprocessing.py  timer.py  write.py
(+6 files in other folders)
