[tool.poetry]
name = "utility-route-planner"
version = "0.1.0"
description = ""
authors = ["Jelmar <jelmar.versleijen@alliander.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.3"
rasterio = "^1.3.9"
structlog = "^23.2.0"
scikit-image = "^0.22.0"
pytest = "^7.4.3"
igraph = "^0.11.3"
networkx = "^3.2.1"
cairocffi = "^1.6.1"
matplotlib = "^3.8.2"
osmnx = "^1.8.0"
pydantic = "^2.6.3"
pyogrio = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.linting.dependencies]
pre-commit = "^3.5.0"
black = "^23.9.1"
mypy = "^1.6.1"
types-pyyaml = "^6.0.12"
types-requests = "^2.28.11.2"
ruff = "^0.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
