[project]
name = "utility_route_planner"
version = "0.1.1"
description = ""
authors = [
    { name = "Jelmar", email = "<jelmar.versleijen@alliander.com>" },
]
requires-python = "~=3.10"
readme = "README.md"

dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "scikit-image (>=0.25.1,<0.26.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "igraph (>=0.11.8,<0.12.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "cairocffi (>=1.7.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "osmnx (>=2.0.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pyogrio (>=0.10.0,<0.11.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "fiona (>=1.10.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.linting.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.6.1"
types-pyyaml = "^6.0.12"
types-requests = "^2.28.11.2"
ruff = "^0.6.8"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
log_cli = true
